--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 										<td style="padding-bottom: 20px;">
 											<table width="100%" border="0" cellspacing="0" cellpadding="0" bgcolor="#ffffff">
 												<tr>
-													<td class="p30-15" style="padding: 0px 30px;">
+													<td class="p30-15" style="padding:40px;">
 														<table width="100%" border="0" cellspacing="0" cellpadding="0">
 															<tr>
 																<td class="h3 pb20" style="color:#114490; font-family:'Noto Sans', Arial,sans-serif; font-size:24px; line-height:32px; text-align:left; padding-bottom:20px;">Contact</td>
